MojoAsyncResourceHandler:  Ignore Resume/OnWritable calls after error.

If the Resume succeed after an error, we end up in an indeterminant
state, which would be bad.  Uncear if that can happen, but easy to
prevent it.

BUG=663053

Review-Url: https://codereview.chromium.org/2484933002
Cr-Commit-Position: refs/heads/master@{#430582}

Former-commit-id: f12e05a01aba7dadd32003da6149d0a2f9cd3d52